# altscribe

./: .gitignore  README.md  linkedin-announcement.md  pyproject.toml
.github/workflows/: ci.yaml
src/altscribe/: __init__.py  cli.py  processor.py  vision.py
src/altscribe/analytics/: __init__.py  accessibility_score.py  base.py  content_structure.py  readability.py  registry.py  text_statistics.py  writing_quality.py
src/altscribe/checks/: __init__.py  base.py  color_contrast.py  document_language.py  heading_hierarchy.py  image_alt_text.py  link_text.py  list_structure.py  registry.py  table_accessibility.py
src/altscribe/color/: __init__.py  colorblind.py  contrast.py  extraction.py  palettes.py
src/altscribe/reporting/: __init__.py  formatter.py
tests/: conftest.py  test_analytics_content_structure.py  test_analytics_readability.py  test_analytics_score.py  test_analytics_text_stats.py  test_analytics_writing_quality.py  test_check_color_contrast.py  test_check_headings.py  test_check_language.py  test_check_links.py  test_check_lists.py  test_check_tables.py  test_color_colorblind.py  test_color_contrast_calc.py  test_color_extraction.py  test_color_palettes.py  test_processor.py  test_reporting.py  test_vision.py
